<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0dp
"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="00dp"
        android:background="@drawable/gradient_transparent_white"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />




    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Profil Düzenle"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_check" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile"
        app:civ_border_color="#000"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabBar" />


    <TextView
        android:id="@+id/tv_changePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/change_photo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <!-- Ana ekran -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabBar"
        android:background="@color/transparent"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_changePhoto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.ns.ui.NSEditText
                android:id="@+id/fullNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:hint="@string/enter_name"
                app:cornerRadius="12dp"
                app:edgeColor="@color/editTextDefaultBorder"
                app:edgeWidth="1dp" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingTop="18dp"
                android:text="@string/kullanici_adi"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.ns.ui.NSEditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kullanici_adi"
                android:paddingLeft="8dp"
                app:cornerRadius="12dp"
                app:edgeColor="@color/editTextDefaultBorder"
                app:edgeWidth="1dp" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:text="@string/biography"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.ns.ui.NSEditText
                android:id="@+id/et_biografi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/biography"
                android:paddingLeft="8dp"
                app:cornerRadius="12dp"
                app:edgeColor="@color/editTextDefaultBorder"
                app:edgeWidth="1dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:text="@string/website"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.example.ns.ui.NSEditText
                android:id="@+id/et_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empty"
                android:paddingLeft="8dp"
                app:cornerRadius="12dp"
                app:edgeColor="@color/editTextDefaultBorder"
                app:edgeWidth="1dp" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
