<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_profileimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:padding="8dp"
            android:src="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/post_tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/full_name_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/post_profileimage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/post_ivmenu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/menu_threedot" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <androidx.media3.ui.PlayerView
            android:id="@+id/post_vv_postvideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:show_timeout="2000"
            android:layout_gravity="center_vertical"
            app:controller_layout_id="@layout/exo_player_control_view2"
            app:show_rewind_button="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/post_iv_postimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="400dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.example.ns.ui.NSDynamicImageButton
            android:id="@+id/post_ivlike"
            android:layout_margin="8dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:firstImage="@drawable/like"
            app:secondImage="@drawable/like_filled"
            android:layout_weight="0" />

        <ImageView
            android:id="@+id/post_ivcomment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/comment"
            android:layout_weight="0" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.example.ns.ui.NSDynamicImageButton
            android:id="@+id/post_ivsave"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            app:firstImage ="@drawable/save"
            app:secondImage ="@drawable/save_filled"
            android:layout_weight="0" />
    </LinearLayout>

    <TextView
        android:id="@+id/post_tv_likecount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black"
        android:text="@string/like_count_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_tvusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/username_placeholder"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_tvdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/description_placeholder"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_showcomments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/view_comments" />

    <TextView
        android:id="@+id/post_tv_dateago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/date_placeholder" />
</LinearLayout>
